# advanced-guide-to-django

./: .env-example  docker-compose.yaml  et --hard Add react-apollo
client/: Dockerfile  package.json
client/public/: index.html
client/src/: App.tsx  index.tsx  styles.css
client/src/api/fragments/: index.js
client/src/api/mutation/: index.js
client/src/api/queries/: index.js
client/src/components/: AppBreadcrumbs.tsx  AppRouter.tsx  NavBar.tsx
client/src/components/NavBar/: index.tsx  styles.css
client/src/hooks/: useActions.ts
client/src/models/: IBoard.ts  IPost.ts  ITopic.ts  IUser.ts
client/src/pages/: Boards.tsx  Login.tsx  Posts.tsx  Register.tsx  Topics.tsx
client/src/pages/Auth/: Login.tsx  Register.tsx  styles.css
client/src/router/: index.ts
client/src/store/: index.ts
client/src/store/reducers/: action-creators.ts  index.ts
client/src/store/reducers/auth/: action-creators.ts  index.ts  types.ts
client/src/store/reducers/boards/: action-creators.ts  index.ts  types.ts
client/src/store/reducers/posts/: action-creators.ts  index.ts  types.ts
client/src/utils/: goToRoute.ts  index.ts  messages.ts
server/: Dockerfile  manage.py  pyproject.toml
server/accounts/: constants.py  forms.py  managers.py  models.py  mutations.py  schema.py
server/accounts/migrations/: 0001_initial.py  0002_user_is_active_user_is_staff.py
server/boards/: admin.py  models.py  schema.py
server/boards/migrations/: 0001_initial.py  0002_remove_topic_message.py
server/server/: schema.py  settings.py  urls.py
(+3 files in other folders)
