[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.5"
graphene = "^3.3"
graphene-django = "^3.1.2"
django-graphql-jwt = "0.3.4"
serious-django-graphene = "^0.5.1"
markdown = "^3.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
